<resources>
    <string name="app_name">Tokky</string>
    <string name="empty_layout_text">No tokens available\nAdd a token by clicking <b>\'+\'</b> at the bottom</string>
    <string name="cd_fab_add_new">add</string>
    <string name="expandable_fab_qr_title">Scan a QR Code</string>
    <string name="expandable_fab_manual_title">Enter Manually</string>
    <string name="error_bad_formed_otp_url">Badly formed URL. Please try to enter manually</string>
    <string name="ok">OK</string>
    <string name="warning">Warning</string>
    <string name="replace">Replace</string>
    <string name="rename">Rename</string>
    <string name="remove">Remove</string>
    <string name="go_back">Go back</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="remove_account">Remove account</string>

    <string name="toast_copied_to_clipboard">Copied to clipboard</string>
    <string name="label_clipboard_content">OTP Token</string>
    <string name="auth_activity_biometric_unlock_prompt_title">Unlock to use Tokky</string>
    <string name="auth_activity_biometric_unlock_prompt_negative_text">Use PIN</string>
    <string name="title_settings">Settings</string>
    <string name="enable_app_lock_prompt">Enable biometric unlock</string>
    <string name="disable_app_lock_prompt">Disable biometric unlock</string>
    <string name="app_lock_prompt_negative_text">Cancel</string>

    <string name="dialog_message_delete_token">Before removing the token \'%1$s\', please ensure that you turn off 2FA for this account.\n\nAlso, please ensure that you have an alternative mechanism for generating codes.</string>
    <!-- Settings Activity -->
    <string name="settings_setup_pin_bottom_sheet_title">Create a new PIN</string>
    <string name="settings_setup_reenter_pin_bottom_sheet_title">Reenter your PIN</string>
    <string name="settings_disable_pin_bottom_sheet_title">Enter your PIN to disable app lock</string>
    <string name="settings_app_lock_incorrect_pin">Incorrect PIN</string>

    <!-- ImportActivity -->
    <string name="export_password">Password</string>
    <string name="import_btn_title">Import</string>
    <string name="import_password_failed_msg">Invalid password or corrupted file</string>
    <string name="import_password_dialog_title">Enter password</string>
    <string name="import_password_dialog_positive_btn">Decrypt</string>
    <string name="import_password_dialog_negative_btn">Cancel</string>
    <string name="import_success_msg_singular">%1$s Account Imported</string>
    <string name="import_success_msg_plural">%1$s Accounts Imported</string>
    <string name="import_edit_dialog_title">Update account details</string>
    <string name="import_edit_dialog_empty_error_msg">Issuer field can\'t be blank</string>
    <string name="import_edit_dialog_positive_btn">OK</string>

    <!-- ImportFailedActivity -->
    <string name="import_failed_page_title">Twin accounts</string>
    <string name="import_failed_page_message">Below accounts have name conflicts with existing accounts. Please edit the details and save it or remove them</string>
    <string name="import_failed_dialog_existing_token">Account already exists. Please enter a different name</string>
    <string name="import_failed_edit_dialog_title">Edit account details</string>
    <string name="import_failed_edit_dialog_positive_btn">Save &amp; Add</string>

    <!-- Authentication Screen -->
    <string name="unlock_vault">Unlock your vault</string>
    <string name="unlock_vault_message">Access your account with your 4-digit passcode</string>
    <string name="unlock_with_biometrics">Use biometrics</string>

    <!-- TokenSetupScreen -->
    <string name="title_enter_account_details">Enter account details</string>
    <string name="title_update_account_details">Update account details</string>
    <string name="label_issuer">Issuer</string>
    <string name="label_label">Label</string>
    <string name="label_secret_key">Secret Key</string>
    <string name="label_digits">Digits</string>
    <string name="label_period">Period</string>
    <string name="label_algorithm">Algorithm</string>
    <string name="hint_issuer">Name of issuer</string>
    <string name="hint_label">Email or username</string>
    <string name="hint_secret_key">Secret key</string>
    <string name="hint_period">Period (default - 30)</string>
    <string name="hint_digits">Digits (default - 6)</string>
    <string name="error_issuer_empty">Issuer cannot be empty</string>
    <string name="error_secret_key_empty">Secret Key cannot be empty</string>
    <string name="error_secret_key_invalid">Invalid Secret Key format</string>
    <string name="error_period_empty">Period cannot be empty</string>
    <string name="error_period_invalid">Period must be a positive number >0</string>
    <string name="error_digits_empty">Digits cannot be empty</string>
    <string name="error_digits_invalid">Digits must be a positive number between 1 to 10</string>
    <string name="label_advanced_options">Advanced options</string>
    <string name="label_add_account">Add account</string>
    <string name="label_update_account">Update account</string>
    <string name="message_unsaved_changes">Going back will clear all the fields. Are you sure to go back?</string>
    <string name="account_exists_dialog_title">Account already exists</string>
    <string name="account_exists_dialog_message">You already have an account with name \'%1$s\'</string>
    <string name="biometric_prompt_title">Verify your identity</string>

    <!-- Export tokens screen-->
    <string name="password">Password</string>
    <string name="enter_password_for_backup">Enter password for backup</string>
    <string name="password_empty">Password can\'t be empty</string>
    <string name="password_mismatch">Password didn\'t matched</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reenter_above_password">Re-enter above password</string>
    <string name="show_password">Show password</string>
    <string name="export">Export</string>
    <string name="export_success">Accounts exported</string>
    <string name="export_error">Some error occurred while exporting</string>

    <!-- ImportTokensScreen -->
    <string name="import_label">Import</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_password_to_restore">Enter password to restore</string>
    <string name="decrypt">Decrypt</string>
    <string name="decrypt_your_file">Decrypt your file</string>
    <string name="proceed">Proceed</string>
    <string name="duplicate_warning_message">Only %1$d entries will be imported. %2$d duplicate entries will be ignored.</string>
    <string name="set_password">Set password</string>
    <string name="password_min_length_error">Password should have atleast 6 characters</string>
    <string name="remove_password">Remove password</string>
</resources>