<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/scrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_expandable_fab_scrim"
        android:importantForAccessibility="no"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fab_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="invisible"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_fab_item_text"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/expandable_fab_qr_title"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_fab_item_icon"
                android:backgroundTint="?colorSurfaceVariant"
                android:padding="8dp"
                android:src="@drawable/ic_add_qr" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fab_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="invisible"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_fab_item_text"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/expandable_fab_manual_title"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_fab_item_icon"
                android:backgroundTint="?colorSurfaceVariant"
                android:padding="8dp"
                android:src="@drawable/ic_add_manual" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginVertical="10dp"
            android:layout_margin="@dimen/screen_margin"
            android:contentDescription="@string/cd_fab_add_new"
            android:src="@drawable/ic_add" />
    </LinearLayout>
</FrameLayout>