<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adv_options_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="@dimen/screen_margin"
    android:visibility="gone"
    tools:visibility="visible">

    <LinearLayout
        android:id="@+id/period_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextAppearance.Material3.TitleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/label_period" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/hint_period"
            app:startIconDrawable="@drawable/ic_period">

            <com.google.android.material.textfield.TextInputEditText
                style="?textInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/otp_length_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <TextView
            style="@style/TextAppearance.Material3.TitleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/label_otp_length" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/otp_length_toggle_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            app:checkedButton="@id/btn_6digits"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/btn_4digits"
                style="?buttonGroupButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="4" />

            <Button
                android:id="@+id/btn_6digits"
                style="?buttonGroupButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="6" />

            <Button
                android:id="@+id/btn_8digits"
                style="?buttonGroupButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="8" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/algo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <TextView
            style="@style/TextAppearance.Material3.TitleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/label_algorithm" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/algo_toggle_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            app:checkedButton="@id/btn_sha1"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/btn_sha1"
                style="?buttonGroupButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="SHA1" />

            <Button
                android:id="@+id/btn_sha256"
                style="?buttonGroupButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="SHA256" />

            <Button
                android:id="@+id/btn_sha512"
                style="?buttonGroupButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="SHA512" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>
</LinearLayout>